Fix compile problems with Java 16